force-app/main/default/objects/cgc_sync__Sync_Client_Registration__c/cgc_sync__Sync_Client_Registration__c.object-meta.xml
<CustomObject>
    <description>Stores the details of the Consumer Goods Cloud offline mobile app device from which a synchronization request to Salesforce was initiated.</description>
    <label>Sync Device Registration</label>
    <nameField>
        <displayFormat>SCR-{00000000}</displayFormat>
        <label>Sync Client Registration</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sync Device Registrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>