force-app/main/default/objects/cgc_sync__Sync_Client_Registration__c/fields/cgc_sync__Device_Id__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Device_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Unique identifier of the device that initiated a synchronization request.</description>
    <inlineHelpText>Specifies the unique identifier of the device that initiated a synchronization request.</inlineHelpText>
    <label>Device ID</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>