force-app/main/default/objects/cgc_sync__Sync_Client_Registration__c/fields/cgc_sync__Get_First_Sync_Request_Queue_Time__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Get_First_Sync_Request_Queue_Time__c</fullName>
    <description>Gets the time taken, in milliseconds, to queue the first sync request.</description>
    <inlineHelpText>Specifies the milliseconds of the first synchronization request to get a position in the sync queue.</inlineHelpText>
    <label>Get First Sync Request Queued Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>