force-app/main/default/objects/cgc_sync__Sync_Client_Registration__c/fields/cgc_sync__Last_Queue_Status_Request_At__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Last_Queue_Status_Request_At__c</fullName>
    <description>Timestamp of the last synchronization request.</description>
    <inlineHelpText>Specifies the timestamp of the last synchronization request.</inlineHelpText>
    <label>Last Sync Request Queued At</label>
    <type>DateTime</type>
</CustomField>