force-app/main/default/objects/cgc_sync__Sync_Client_Registration__c/fields/cgc_sync__Sync_Action_Type__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Sync_Action_Type__c</fullName>
    <description>Indicates the type of the last initiated synchronization process as Background Sync, FSOD, Initial Sync, On Demand, or Regular Sync.</description>
    <inlineHelpText>Type of the last initiated synchronization process. Possible values are: Background Sync, FSOD, Initial Sync, On Demand or Regular Sync.</inlineHelpText>
    <label>Sync Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BACKGROUND_SYNC</fullName>
                <label>Background Sync</label>
            </value>
            <value>
                <fullName>FSOD</fullName>
            </value>
            <value>
                <fullName>INITIAL_SYNC</fullName>
                <label>Initial Sync</label>
            </value>
            <value>
                <fullName>ON_DEMAND_SYNC</fullName>
                <label>On Demand</label>
            </value>
            <value>
                <fullName>REGULAR_SYNC</fullName>
                <label>Regular Sync</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>