force-app/main/default/objects/cgc_sync__Sync_Client_Registration__c/fields/cgc_sync__Sync_Client_Queue_Status__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Sync_Client_Queue_Status__c</fullName>
    <description>Indicates the state of the synchronization request as Canceled, Done, Processing, or Waiting.</description>
    <inlineHelpText>Status of the synchronization request. Possible values are: Canceled, Done, Processing, or Waiting.</inlineHelpText>
    <label>Sync Status in Queue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CANCELLED</fullName>
                <label>Cancelled</label>
            </value>
            <value>
                <fullName>DONE</fullName>
                <default>true</default>
                <label>Done</label>
            </value>
            <value>
                <fullName>PROCESSING</fullName>
                <label>Processing</label>
            </value>
            <value>
                <fullName>WAITING</fullName>
                <label>Waiting</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>